--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 {% load staticfiles %} <!-- New line -->
 <html>
-	<head>
-		<title>Rango</title>
-	</head>
-	<body>
-		<h1>Rango says...</h1>
-		<div>
-			hey there partner! <br />
-			<strong>{{ boldmessage }}</strong><br />
-		</div>
-		<div>
-			<a href="/rango/about/">About</a><br />
-			<img src="{% static "images/rango.jpg" %}"
-			alt="Picture of Rango" /> <!-- New line -->
-		</div>
-	</body>
+<head>
+	<title>Rango</title>
+</head>
+<body>
+	<h1>Rango says...</h1>
+	<div>hey there partner! </div>
+	
+	<div>
+	{% if categories %}
+	<ul>
+		{% for category in categories %}
+			<li>{{ category.name }}</li>
+		{% endfor %}
+	</ul>
+	{% else %}
+		<strong>{{ boldmessage }}</strong>
+	{% endif %}
+	</div>
+	
+	<div>
+		<a href="/rango/about/">About</a><br />
+		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
+	</div>
+</body>
 </html>
