--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,7 +13,7 @@
 		</div>
 		<div>
 			<a href="/rango/">Index</a><br />
-			<img src="{{ MEDIA_URL}}cat.jpg" />
+			<img src="{{ MEDIA_URL}}cat.jpg" alt = "Picture of cat"/>
 		</div>
 	</body>
 </html>
