--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
-	<body>
+{% block title_block %}
+	Rango
+{% endblock %}
+{% block body_block %}
 		<h1>Rango says...</h1>
 		<div>
 			here is the about page. <br />
@@ -12,8 +11,7 @@
 			<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
-			<a href="/rango/">Index</a><br />
+			<a href="{% url 'index' %}">Index</a><br />
 			<img src="{{ MEDIA_URL}}cat.jpg" alt = "Picture of cat"/>
 		</div>
-	</body>
-</html>
+{% endblock %}
