--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,9 +1,10 @@
-<html>
-  <head>
-    <title>Add Page</title>
-  </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+	Add Page
+{% endblock %}
 
-  <body>
+{% block body_block %}
     {% if category %}
       <h1>Add a Page to {{category.name}}</h1>
       <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
@@ -21,5 +22,4 @@
       {% else %}
       A category by this name does not exist!
       {% endif%}
-    </body>
-</html>
+{% endblock %}
