--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %} <!-- New line -->
-<html>
-<head>
-	<title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+	Rango
+{% endblock %}
+{% block body_block %}
 	<h1>Rango says...</h1>
 	<div>hey there partner! </div>
 
@@ -16,7 +15,7 @@
 	<ul>
 		{% for category in categories %}
 			<li>
-			<a href="/rango/category/{{category.slug}}">{{ category.name }}</a></li>
+			<a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
 		{% endfor %}
 	</ul>
 	{% else %}
@@ -40,9 +39,8 @@
 		</div>
 
 	<div>
-		<a href="/rango/about/">About</a><br />
-		<a href="/rango/add_category/">Add a New Category</a><br />
+		<a href="{% url 'about' %}">About</a><br />
+		<a href="{% url 'add_category' %}">Add a New Category</a><br />
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
 	</div>
-</body>
-</html>
+{% endblock %}
