--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -4,8 +4,12 @@
 	Rango
 {% endblock %}
 {% block body_block %}
-	<h1>Rango says...</h1>
-	<div>hey there partner! </div>
+<h1>Rango says...</h1>
+	{% if user.is_authenticated %}
+		howdy {{ user.username }}!
+	{% else %}
+		hey there partner!
+	{% endif %}
 
 	<div>
 		<div>
@@ -37,10 +41,7 @@
 			<strong>There are no categories present.</strong>
 		{% endif %}
 		</div>
-
 	<div>
-		<a href="{% url 'about' %}">About</a><br />
-		<a href="{% url 'add_category' %}">Add a New Category</a><br />
 		<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
 	</div>
 {% endblock %}
