--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,6 +5,7 @@
 {% endblock %}
 {% block body_block %}
 		<h1>Rango says...</h1>
+		<p>visits: {{ visits }}</p>
 		<div>
 			here is the about page. <br />
 			This tutorial has been put together by Harry. <br />
